# sam3-demo

./: .gitignore  AGENTS.md  README.md  convert_notebooks.py  docker-compose.yml  install.sh  main.py  monitor.sh  process_assets.py  pyproject.toml  restart.sh  run_all_examples.py  start.sh  stop.sh  test_e2e_screenshots.py
backend/: Dockerfile  main.py
examples_py/: saco_gold_silver_eval_example.py  saco_gold_silver_vis_example.py  saco_veval_eval_example.py  saco_veval_vis_example.py  sam3.1_video_predictor_example.py  sam3_agent.py  sam3_for_sam1_task_example.py  sam3_for_sam2_video_task_example.py  sam3_image_batched_inference.py  sam3_image_interactive.py  sam3_image_predictor_example.py  sam3_video_predictor_example.py
frontend/: Dockerfile
frontend/src/app/: layout.tsx  page.tsx
nginx/: nginx.conf
scratch/: test_describe.py
tests/: run_e2e_tests.sh
