[project]
name = "sam3-demo-jun-2026-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.138.0",
    "hf-transfer>=0.1.9",
    "playwright>=1.60.0",
    "sam3[dev,notebooks]",
    "spacy",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.49.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.workspace]
members = [
    "sam3",
]

[tool.uv.sources]
sam3 = { workspace = true, editable = true }
